force-app/main/default/objects/Data_Deletion__c.object
<CustomObject>
    <fields>
        <fullName>Execute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Execute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>account</fullName>
                </value>
                <value>
                    <fullName>Acknowledgement__c</fullName>
                </value>
                <value>
                    <fullName>Annual_Household_Information__c</fullName>
                </value>
                <value>
                    <fullName>Annual_Student_Information__c</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Emergency_Contact__c</fullName>
                </value>
                <value>
                    <fullName>Enrollment__c</fullName>
                </value>
                <value>
                    <fullName>Enrollment_Component_Affiliation__c</fullName>
                </value>
                <value>
                    <fullName>Enrollment_Component_Relationship__c</fullName>
                </value>
                <value>
                    <fullName>Enrollment_Document__c</fullName>
                </value>
                <value>
                    <fullName>Extended_Data__c</fullName>
                </value>
                <value>
                    <fullName>Health_and_Immunization__c</fullName>
                </value>
                <value>
                    <fullName>hed__Program_Enrollment__c</fullName>
                </value>
                <value>
                    <fullName>hed__Relationship__c</fullName>
                </value>
                <value>
                    <fullName>Home_Language_Survey__c</fullName>
                </value>
                <value>
                    <fullName>Intent_To_Return__c</fullName>
                </value>
                <value>
                    <fullName>opportunity</fullName>
                </value>
                <value>
                    <fullName>Placement_and_Elective__c</fullName>
                </value>
                <value>
                    <fullName>program_enrollment_criteria__c</fullName>
                </value>
                <value>
                    <fullName>Special_Education__c</fullName>
                </value>
                <value>
                    <fullName>Student_Custody__c</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>user</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderOfExecution__c</fullName>
        <label>OrderOfExecution</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Data Deletion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DD-{0000}</displayFormat>
        <label>Data Deletion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Deletion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>